# hil-simulator

./: README.md
Dynamics/ps3_joy_thrusters/: CMakeLists.txt
Dynamics/ps3thrustInput/: CMakeLists.txt
Dynamics/simulator_prototype/: CMakeLists.txt
Dynamics/txt_to_actuator_info/: package.xml
catkin_ws/devel/: .catkin
catkin_ws/simulator_prototype/: CMakeLists.txt  logs_2017-02-02-10-38-52.bag
catkin_ws/src/: simulator_prototype.iso  x
catkin_ws/src/simulator_prototype/: CMakeLists.txt
catkin_ws/src/simulator_prototype/config/models/: Jolner.urdf  Jolner.yaml  Odin.urdf  Odin2.yaml  Test.yaml  map.urdf  revolt.urdf
catkin_ws/src/simulator_prototype/config/rviz/: config.rviz
catkin_ws/src/simulator_prototype/include/: actuatormodel.h  gps.h  imu.h  mru.h  sensor.h  solver.h  speedsensor.h  vessel.h  vesselnode.h  weather.h
catkin_ws/src/simulator_prototype/launch/: ps3Jolner.launch  ps3Odin.launch
catkin_ws/src/simulator_prototype/logs/: run_2017-02-02-10-51-58.bag  run_2017-02-02-10-53-43.bag  run_2017-02-02-10-53-57.bag  run_2017-02-02-11-24-28.bag  run_2017-02-02-11-25-32.bag  run_2017-02-02-11-39-44.bag  run_2017-02-02-11-42-53.bag  run_2017-02-02-11-47-44.bag  run_2017-02-27-15-32-30.bag  run_2017-02-28-10-28-23.bag  run_2017-02-28-10-29-44.bag  run_2017-02-28-10-45-41.bag  run_2017-02-28-11-38-16.bag  run_2017-02-28-11-40-03.bag  run_2017-03-24-12-45-49.bag  run_2017-03-24-14-09-00.bag  run_2017-03-24-14-33-29.bag  run_2017-03-24-14-34-44.bag  run_2017-03-27-12-57-09.bag  run_2017-03-27-13-03-40.bag  run_2017-03-27-13-06-11.bag  run_2017-03-27-13-10-48.bag  run_2017-03-27-13-14-17.bag  run_2017-03-27-13-57-45.bag  run_2017-03-27-14-10-23.bag  run_2017-03-27-14-17-06.bag  run_2017-03-27-14-26-48.bag  run_2017-03-27-16-00-43.bag
catkin_ws/src/simulator_prototype/meshes/: test_map.stl  test_map2.stl
catkin_ws/src/simulator_prototype/msg/: GpsPos.msg
catkin_ws/src/simulator_prototype/src/: actuatormodel.cpp  gps.cpp  hil_simulator.cpp  imu.cpp  mru.cpp  sensor.cpp  speedsensor.cpp  unittest.cpp  vessel.cpp  vesselnode.cpp  weather.cpp  wind.cpp
catkin_ws3/devel/: setup.sh
catkin_ws3/src/gtest_car/: CMakeLists.txt
catkin_ws3/src/gtest_car/html/: annotated.html
catkin_ws3/src/gtest_car/src/: Maths.cpp  Test.cpp
devel/: .rosinstall
gtest_car/html/: _maths_8h_source.html  _talker_8h_source.html  class_math-members.html  classes.html  files.html
gui/: CMakeLists.txt
gui/src/: realtimeplot.cpp  (+1 more)
install/: .rosinstall  setup.sh
ps3_joy_thrusters/: CMakeLists.txt
ps3_thrust_input/: CMakeLists.txt
ps3thrustInput/: CMakeLists.txt
simulator_messages/: CMakeLists.txt
txt_to_actuator_info/: CMakeLists.txt
(+271 files in other folders)
